Add documentation and API for automatic label printing
Added multiple markdown documents detailing the new automatic label printing API, its usage, error handling, and frontend integration. Implemented backend support for counting pending labels, including new DTOs, service methods, and controller endpoints. Updated service and persistence layers to support the new workflow. Added PowerShell scripts for testing the new endpoints.